aggiunto revisioni varie

--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
@@ -3,7 +3,7 @@ i documenti prodotti finora.
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}{ c c  C{4cm}  c  c }
-    \caption{Tabella dell'indice di Gulpease} \\
+    \caption{Tabella dell'indice di Gulpease RR} \\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \centering\textbf{Documento}}     & \textcolor{\secondaryColor}{\centering\textbf{Indice Gulpease}}    & \textcolor{\secondaryColor}
@@ -24,5 +24,27 @@ i documenti prodotti finora.
 
 \end{longtable}
 
+\rowcolors{2}{\evenRowColor}{\oddRowColor}
+\renewcommand{\arraystretch}{1.5}
+\begin{longtable}{ c c  C{4cm}  c  c }
+    \caption{Tabella dell'indice di Gulpease RP} \\
+    \rowcolor{\primaryColor}
+    \textcolor{\secondaryColor}{
+    \centering\textbf{Documento}}     & \textcolor{\secondaryColor}{\centering\textbf{Indice Gulpease}}    & \textcolor{\secondaryColor}
+    {\centering\textbf{Esito}} \\
+    \textit{Analisi dei Requisiti v2.0.0}           & 70                                    & Superato{} \\
+    \textit{Glossario v2.0.0}                       & 73                                    & Superato{} \\
+    \textit{Norme di Progetto v2.0.0}               & 72                                   & Superato{} \\
+    \textit{Piano di Progetto v2.0.0}                & 65                                    & Superato{} \\
+    \textit{Piano di Qualifica v2.0.0}                & 68                                    & Superato{} \\
+    \textit{Verbale Interno DA SISTEMARE}          & 72                                    & Superato{} \\
+    \textit{Verbale Esterno DA SISTEMARE}          & 74                                    & Superato{} \\
+    
+\end{longtable}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.8]{src/ResocontoVerifica/src/img/indiceGulpease.png}
+	\caption{Indice di Gulpease}
+\end{figure}
 
